@@ -257,7 +257,7 @@ std::string FCEUI_GetMovieName(void);
 void FCEUI_MovieToggleFrameDisplay();
 void FCEUI_ToggleInputDisplay(void);
 
-void LoadSubtitles(void);
+void LoadSubtitles(MovieData);
 void ProcessSubtitles(void);
 void FCEU_DisplaySubtitles(char *format, ...);
 
